Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <h2>
 <a name="what-if-you-could-get-more" class="anchor" href="#what-if-you-could-get-more"><span class="octicon octicon-link"></span></a>What if you could get more?</h2>
 
-<p>This small library aims at providing additional features to your "Enumerations" - a set of static values that represents something meaningful to your code.</p>
+<p>This small library aims at providing additional features to your "Enumerations" - a set of static values that represent something meaningful to your code.</p>
 
 <h2>
 <a name="the-problem-with-constants" class="anchor" href="#the-problem-with-constants"><span class="octicon octicon-link"></span></a>The problem with constants</h2>
@@ -105,7 +105,7 @@
 <span class="k">echo</span> <span class="nx">Animal</span><span class="o">::</span><span class="na">getName</span><span class="p">(</span> <span class="nv">$value</span> <span class="p">);</span> <span class="c1">// prints (string)"Dog"</span>
 </pre></div>
 
-<p>As you can see, suddenly there's much more you can possibly do with a class as simple as enumeration can be. Learn more in the <a href="">API Docs</a> which also include code examples and full method description.</p>
+<p>As you can see, suddenly there's much more you can possibly do with a class as simple as enumeration can be. Learn more in the <a href="http://alaneor.github.io/Enumeration/docs">API Docs</a> which also include code examples and full method description.</p>
 
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
@@ -120,7 +120,7 @@
 <h2>
 <a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h2>
 
-<p><a href="">API documentation</a> is available online - it includes all public methods you can use and also several code samples and use cases.</p>
+<p><a href="http://alaneor.github.io/Enumeration/docs">API documentation</a> is available online - it includes all public methods you can use and also several code samples and use cases.</p>
 
 <h3>
 <a name="offline-documentation" class="anchor" href="#offline-documentation"><span class="octicon octicon-link"></span></a>Offline documentation</h3>
