Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
         <section id="main_content">
           <h1>
-<a name="enumerations-for-php" class="anchor" href="#enumerations-for-php"><span class="octicon octicon-link"></span></a>Enumerations for php</h1>
+<a name="enumerations-for-php--" class="anchor" href="#enumerations-for-php--"><span class="octicon octicon-link"></span></a>Enumerations for php <a href="https://travis-ci.org/Dreamscapes/Enumeration"><img src="https://api.travis-ci.org/Dreamscapes/Enumeration.png" alt="Build Status"></a> <a href="https://gemnasium.com/Dreamscapes/Enumeration"><img src="https://gemnasium.com/Dreamscapes/Enumeration.png" alt="Dependency Status"></a>
+</h1>
 
 <p>Every php programmer at some point wants to put some structure to all those constants defined in their code. Usually one would put those constants under a dedicated class, but that's it; no additional features, no real benefit, no nothing.</p>
 
@@ -127,7 +128,7 @@
 <h3>
 <a name="via-composer" class="anchor" href="#via-composer"><span class="octicon octicon-link"></span></a>Via Composer:</h3>
 
-<p><code>composer require dreamscapes\enumerations:dev-master</code></p>
+<p><code>composer require dreamscapes\enumeration:dev-master</code></p>
 
 <p>Composer's autoloading is supported so as long as you <code>require "vendor/autoload.php";</code> somewhere in your code you can simply start using it.</p>
 
@@ -141,7 +142,7 @@
 
 <p>Sure! Just install the development dependencies and generate the docs.</p>
 
-<pre><code>composer require --dev alaneor\enumerations:dev-master
+<pre><code>composer require --dev dreamscapes\enumeration:dev-master
 php vendor/bin/phpdoc.php
 </code></pre>
 
